# nats-mgr

./: Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
charts/nats/templates/: crd.yaml
src/: crdgen.rs  defaults.rs  lib.rs
src/apis/: mod.rs  nats_types.rs
