[package]
name = "nats-mgrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.83.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.18.0", features = ["v1_25", "schemars"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0.94"
serde_yaml = "0.9.19"
